refactor: merge entry into subscription entry